discussion/kv_engine/180372/180372_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Additional trace spans for backfill

- Record additional details of the BackfillManagerTask - which
  backfill manager it is for and what the status was.

- Add spans to MagmaKVStore for creating and scan()ing a range scan.

- Record the current seqno for CouchKVStore scans.

Change-Id: I2a1bd4276fe4f70b621d95b67d6f27655e90aef5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-23 14:49:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-09-23 14:49:51.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/316724/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-23 14:54:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/358/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1626:5: error: use of undeclared identifier "TRACE_EVENT2" [clang-diagnostic-error]
    TRACE_EVENT2("MagmaKVStore",
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1735:5: error: use of undeclared identifier "TRACE_EVENT_START2" [clang-diagnostic-error]
    TRACE_EVENT_START2("MagmaKVStore",
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1895:22: error: use of undeclared identifier "PHOSPHOR_INLINE_STR" [clang-diagnostic-error]
                     PHOSPHOR_INLINE_STR(to_string(status)));
                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/358/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1626:5:
error: use of undeclared identifier "TRACE_EVENT2" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/358/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/491/ : FAILURE

CMake error: tlm/cmake/Modules/FindCouchbaseGo.cmake:85 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/491/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/350/ : FAILURE

CMake error: tlm/cmake/Modules/FindCouchbaseGo.cmake:85 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/350/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/370/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/370/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/361/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/361/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/373/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/373/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/374/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/374/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/358/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/358/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/383/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/383/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/560/ : FAILURE

Compile error at [2022-09-23T14:52:00.304Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:24:
error: "TracerStopwatch" does not refer to a value
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/560/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19871/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
